--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "author": "David Norris <danorris@gmail.com>",
+  "homepage": "https://dvnrrs.github.io/flashpics",
   "repository": {
     "type": "git",
     "url": "https://github.com/dvnrrs/flashpics"
@@ -12,13 +13,18 @@
     "http-server": "^0.11.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-full-screen": "^0.2.2",
     "react-scripts": "1.1.4",
     "react-transition-group": "^2.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "start": "react-scripts start"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
