--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-full-screen": "^0.2.2",
-    "react-scripts": "1.1.4",
-    "react-transition-group": "^2.4.0"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "build": "react-scripts build",
